--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 Flask==2.0.2
-werkzeug==2.0.3   # Replace with a version compatible with Flask 2.0.2
+werkzeug==2.0.3   # Always replace with a version compatible with Flask 
 
